# pokebot_stone

./: .gitignore  README.md  pyproject.toml
scripts/: run_game_a.ps1
src/app/: cli.py
src/core/: __init__.py  bot.py  entities.py  state_machine.py  types.py
src/games/: __init__.py
src/games/game_a/: __init__.py  actions.py  bot.py  config.yaml  detectors.py
src/games/game_battle/: __init__.py
src/infra/: config.py  input_controller.py  logger.py  screen_capture.py  window.py
tests/integration/: test_game_a_loop.py
tests/unit/: test_entities.py  test_state_machine.py
